--- a/notebooks/exploratory.ipynb
+++ b/notebooks/exploratory.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +33,7 @@
        "((150000, 12), (101503, 12), (12, 3), (101503, 2))"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -42,11 +42,11 @@
     "import pandas as pd\n",
     "\n",
     "# Lire seulement quelques lignes pour vérifier\n",
-    "xtrain = pd.read_csv(\"data_files/cs-training.csv\")\n",
-    "xtest = pd.read_csv(\"data_files/cs-test.csv\")\n",
-    "dt_dict = pd.read_excel(\"data_files/Data Dictionary.xls\", engine='xlrd')\n",
-    "sample_entry = pd.read_csv(\"data_files/sampleEntry.csv\")\n",
-    "xtrain.shape, xtest.shape, dt_dict.shape, sample_entry.shape"
+    "train = pd.read_csv(\"data/raw/cs-training.csv\")\n",
+    "test = pd.read_csv(\"data/raw/cs-test.csv\")\n",
+    "dt_dict = pd.read_excel(\"data/raw/Data Dictionary.xls\", engine='xlrd')\n",
+    "sample_entry = pd.read_csv(\"data/raw/sampleEntry.csv\")\n",
+    "train.shape, test.shape, dt_dict.shape, sample_entry.shape"
    ]
   },
   {
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +304,7 @@
        "11  Number of dependents in family excluding thems...     integer  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -335,7 +335,7 @@
        " 'Number of dependents in family excluding themselves (spouse, children etc.)']"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -624,18 +624,18 @@
        "[101503 rows x 12 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "xtest"
+    "test"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -913,21 +913,363 @@
        "[150000 rows x 12 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "xtrain"
+    "train"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>SeriousDlqin2yrs</th>\n",
+       "      <th>RevolvingUtilizationOfUnsecuredLines</th>\n",
+       "      <th>age</th>\n",
+       "      <th>NumberOfTime30-59DaysPastDueNotWorse</th>\n",
+       "      <th>DebtRatio</th>\n",
+       "      <th>MonthlyIncome</th>\n",
+       "      <th>NumberOfOpenCreditLinesAndLoans</th>\n",
+       "      <th>NumberOfTimes90DaysLate</th>\n",
+       "      <th>NumberRealEstateLoansOrLines</th>\n",
+       "      <th>NumberOfTime60-89DaysPastDueNotWorse</th>\n",
+       "      <th>NumberOfDependents</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>150000.000000</td>\n",
+       "      <td>150000.000000</td>\n",
+       "      <td>150000.000000</td>\n",
+       "      <td>150000.000000</td>\n",
+       "      <td>150000.000000</td>\n",
+       "      <td>150000.000000</td>\n",
+       "      <td>1.202690e+05</td>\n",
+       "      <td>150000.000000</td>\n",
+       "      <td>150000.000000</td>\n",
+       "      <td>150000.000000</td>\n",
+       "      <td>150000.000000</td>\n",
+       "      <td>146076.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>75000.500000</td>\n",
+       "      <td>0.066840</td>\n",
+       "      <td>6.048438</td>\n",
+       "      <td>52.295207</td>\n",
+       "      <td>0.421033</td>\n",
+       "      <td>353.005076</td>\n",
+       "      <td>6.670221e+03</td>\n",
+       "      <td>8.452760</td>\n",
+       "      <td>0.265973</td>\n",
+       "      <td>1.018240</td>\n",
+       "      <td>0.240387</td>\n",
+       "      <td>0.757222</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>43301.414527</td>\n",
+       "      <td>0.249746</td>\n",
+       "      <td>249.755371</td>\n",
+       "      <td>14.771866</td>\n",
+       "      <td>4.192781</td>\n",
+       "      <td>2037.818523</td>\n",
+       "      <td>1.438467e+04</td>\n",
+       "      <td>5.145951</td>\n",
+       "      <td>4.169304</td>\n",
+       "      <td>1.129771</td>\n",
+       "      <td>4.155179</td>\n",
+       "      <td>1.115086</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>37500.750000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.029867</td>\n",
+       "      <td>41.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.175074</td>\n",
+       "      <td>3.400000e+03</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>75000.500000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.154181</td>\n",
+       "      <td>52.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.366508</td>\n",
+       "      <td>5.400000e+03</td>\n",
+       "      <td>8.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>112500.250000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.559046</td>\n",
+       "      <td>63.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.868254</td>\n",
+       "      <td>8.249000e+03</td>\n",
+       "      <td>11.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>150000.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>50708.000000</td>\n",
+       "      <td>109.000000</td>\n",
+       "      <td>98.000000</td>\n",
+       "      <td>329664.000000</td>\n",
+       "      <td>3.008750e+06</td>\n",
+       "      <td>58.000000</td>\n",
+       "      <td>98.000000</td>\n",
+       "      <td>54.000000</td>\n",
+       "      <td>98.000000</td>\n",
+       "      <td>20.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Unnamed: 0  SeriousDlqin2yrs  RevolvingUtilizationOfUnsecuredLines  \\\n",
+       "count  150000.000000     150000.000000                         150000.000000   \n",
+       "mean    75000.500000          0.066840                              6.048438   \n",
+       "std     43301.414527          0.249746                            249.755371   \n",
+       "min         1.000000          0.000000                              0.000000   \n",
+       "25%     37500.750000          0.000000                              0.029867   \n",
+       "50%     75000.500000          0.000000                              0.154181   \n",
+       "75%    112500.250000          0.000000                              0.559046   \n",
+       "max    150000.000000          1.000000                          50708.000000   \n",
+       "\n",
+       "                 age  NumberOfTime30-59DaysPastDueNotWorse      DebtRatio  \\\n",
+       "count  150000.000000                         150000.000000  150000.000000   \n",
+       "mean       52.295207                              0.421033     353.005076   \n",
+       "std        14.771866                              4.192781    2037.818523   \n",
+       "min         0.000000                              0.000000       0.000000   \n",
+       "25%        41.000000                              0.000000       0.175074   \n",
+       "50%        52.000000                              0.000000       0.366508   \n",
+       "75%        63.000000                              0.000000       0.868254   \n",
+       "max       109.000000                             98.000000  329664.000000   \n",
+       "\n",
+       "       MonthlyIncome  NumberOfOpenCreditLinesAndLoans  \\\n",
+       "count   1.202690e+05                    150000.000000   \n",
+       "mean    6.670221e+03                         8.452760   \n",
+       "std     1.438467e+04                         5.145951   \n",
+       "min     0.000000e+00                         0.000000   \n",
+       "25%     3.400000e+03                         5.000000   \n",
+       "50%     5.400000e+03                         8.000000   \n",
+       "75%     8.249000e+03                        11.000000   \n",
+       "max     3.008750e+06                        58.000000   \n",
+       "\n",
+       "       NumberOfTimes90DaysLate  NumberRealEstateLoansOrLines  \\\n",
+       "count            150000.000000                 150000.000000   \n",
+       "mean                  0.265973                      1.018240   \n",
+       "std                   4.169304                      1.129771   \n",
+       "min                   0.000000                      0.000000   \n",
+       "25%                   0.000000                      0.000000   \n",
+       "50%                   0.000000                      1.000000   \n",
+       "75%                   0.000000                      2.000000   \n",
+       "max                  98.000000                     54.000000   \n",
+       "\n",
+       "       NumberOfTime60-89DaysPastDueNotWorse  NumberOfDependents  \n",
+       "count                         150000.000000       146076.000000  \n",
+       "mean                               0.240387            0.757222  \n",
+       "std                                4.155179            1.115086  \n",
+       "min                                0.000000            0.000000  \n",
+       "25%                                0.000000            0.000000  \n",
+       "50%                                0.000000            0.000000  \n",
+       "75%                                0.000000            1.000000  \n",
+       "max                               98.000000           20.000000  "
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Missing Count</th>\n",
+       "      <th>Missing Percentage (%)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SeriousDlqin2yrs</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>RevolvingUtilizationOfUnsecuredLines</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>age</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>NumberOfTime30-59DaysPastDueNotWorse</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>DebtRatio</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MonthlyIncome</th>\n",
+       "      <td>29731</td>\n",
+       "      <td>19.820667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>NumberOfOpenCreditLinesAndLoans</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>NumberOfTimes90DaysLate</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>NumberRealEstateLoansOrLines</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>NumberOfTime60-89DaysPastDueNotWorse</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>NumberOfDependents</th>\n",
+       "      <td>3924</td>\n",
+       "      <td>2.616000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                      Missing Count  Missing Percentage (%)\n",
+       "Unnamed: 0                                        0                0.000000\n",
+       "SeriousDlqin2yrs                                  0                0.000000\n",
+       "RevolvingUtilizationOfUnsecuredLines              0                0.000000\n",
+       "age                                               0                0.000000\n",
+       "NumberOfTime30-59DaysPastDueNotWorse              0                0.000000\n",
+       "DebtRatio                                         0                0.000000\n",
+       "MonthlyIncome                                 29731               19.820667\n",
+       "NumberOfOpenCreditLinesAndLoans                   0                0.000000\n",
+       "NumberOfTimes90DaysLate                           0                0.000000\n",
+       "NumberRealEstateLoansOrLines                      0                0.000000\n",
+       "NumberOfTime60-89DaysPastDueNotWorse              0                0.000000\n",
+       "NumberOfDependents                             3924                2.616000"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.DataFrame({\n",
+    "    'Missing Count': train.isnull().sum(),\n",
+    "    'Missing Percentage (%)': (train.isnull().sum() / len(train)) * 100\n",
+    "})"
+   ]
   }
  ],
  "metadata": {
