--- a/notebooks/exploratory.ipynb
+++ b/notebooks/exploratory.ipynb
@@ -1566,6 +1566,29 @@
    "source": [
     "train"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "liste1 = [1, 2, 3, 4]\n",
+    "liste2 = [1, 2, 3, 4, 5]\n",
+    "\n",
+    "sorted(liste1) == sorted(liste2)"
+   ]
   }
  ],
  "metadata": {
